--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "googleapis": "^71.0.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "pg-format": "^1.0.4"
   }
 }
