--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "googleapis": "^71.0.0",
     "pg": "^8.6.0",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "ssl-root-cas": "^1.3.1"
   }
 }
