--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "express": "^4.17.1",
     "googleapis": "^71.0.0",
     "pg": "^8.6.0",
-    "pg-format": "^1.0.4",
-    "ssl-root-cas": "^1.3.1"
+    "pg-format": "^1.0.4"
   }
 }
