--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.18.2",
     "googleapis": "^71.0.0",
     "pg": "^8.6.0",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "sp-request": "^3.0.0",
+    "xml-js": "^1.6.11"
   }
 }
